k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-2048
  labels:
    app: app-2048
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: app-2048
  template:
    metadata:
      labels:
        app: app-2048
    spec:
      serviceAccountName: app-2048
      automountServiceAccountToken: false
      containers:
      - name: app-2048
        image: 076056288980.dkr.ecr.eu-west-2.amazonaws.com/app-2048:v1.0.0
        ports:
        - containerPort: 80
