k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2048
  labels:
    app: app-2048
spec:
  type: ClusterIP 
  selector:
    app: app-2048 
  ports:
    - port: 80 # the Service's port
      targetPort: 8080 # the pod's containerPort
      protocol: TCP
